--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,12 @@ body {
     height: 100%;
 }
 
+input,
+button {
+    border: none;
+    outline: none;
+}
+
 /* Background */
 
 body {
@@ -42,6 +48,36 @@ h1 {
     text-align: center;
 }
 
+/* Form section */
+
+form {
+    width: 90%;
+    margin: auto;
+
+    display: flex;
+    justify-content: center;
+}
+
+/*  Input field*/
+
+#todo-input {
+    width: 80%;
+    padding: 10px;
+    border-radius: 20px 0px;
+    border: 1px solid black;
+}
+
+/* buttons */
+
+button {
+    background: none;
+}
+
+img {
+    width: 30px;
+    height: 30px;
+    padding: 2px;
+}
 
 /* Footer */
 
