--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,10 +10,10 @@
     box-sizing: border-box;
 }
 
-html,
+/* html,
 body {
     height: 100%;
-}
+} */
 
 input,
 button {
@@ -30,11 +30,10 @@ body {
     width: 90%;
     margin: auto;
 
-    background-image: linear-gradient(to top, #ff99c8, #fcf6bd, #d0f4de, #a9def9, #e4c1f9);
+    background-image: linear-gradient(to bottom, #ff99c8, #fcf6bd, #d0f4de, #a9def9, #e4c1f9);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    /* overflow: hidden; */
     color: black;
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 18px;
@@ -52,6 +51,7 @@ h1 {
     font-family: 'Quicksand', sans-serif;
     font-size: 28px;
     text-align: center;
+    text-shadow: 1px 1px #d0f4de;
 }
 
 /* Form section */
@@ -69,20 +69,21 @@ form {
 #todo-input {
     width: 80%;
     padding: 10px;
+    background: linear-gradient(to top, rgba(255, 153, 200, 0.5), rgba(252, 246, 189, 0.5), rgba(208, 244, 222, 0.5), rgba(169, 222, 249, 0.5), rgba(229, 195, 249, 0.5));
     border-radius: 20px 0px;
     border: 1px solid #483e4e;
-    /* box-shadow: inset 0 2px 10px #ff99c8, inset 0 3px 15px #a9def9, inset 0 4px 20px #e4c1f9; */
-    background: linear-gradient(to top, rgba(255, 153, 200, 0.5), rgba(252, 246, 189, 0.5), rgba(208, 244, 222, 0.5), rgba(169, 222, 249, 0.5), rgba(229, 195, 249, 0.5));
     font-size: 18px;
 }
 
+#todo-input:focus,
 #todo-input:hover {
-    border: 1.5px solid #71627a;
+    border: 1.5px solid #483e4e;
+    box-shadow: inset 0 2px 10px #ff99c8;
 }
 
-
-#todo-input:focus {
-    border: 1.5px solid #483e4e;
+#todo-btn img {
+    width: 35px;
+    height: 35px;
 }
 
 /* buttons */
@@ -92,7 +93,13 @@ button {
     background: none;
 }
 
-/* Button bounce on hover taken from https://github.com/IanLunn/Hover */
+/* Button bounce on hover inspiration from https://github.com/IanLunn/Hover */
+
+img {
+    width: 25px;
+    height: 25px;
+    padding: 2px;
+}
 
 button img {
     transform: translateZ(0);
@@ -106,12 +113,6 @@ button:focus img,
 button:active img {
     transform: scale(1.1);
     transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
-}
-
-img {
-    width: 25px;
-    height: 25px;
-    padding: 2px;
 }
 
 /* ToDo Section */
@@ -145,7 +146,7 @@ h2 {
 .todo-item {
     margin-left: 5px;
     padding: 7.5px 0;
-    background: linear-gradient(to top, rgba(255, 153, 200, 0.8), rgba(252, 246, 189, 0.8), rgba(208, 244, 222, 0.8), rgba(169, 222, 249, 0.8), rgba(229, 195, 249, 0.8));
+    background: linear-gradient(to bottom, rgba(255, 153, 200, 0.8), rgba(252, 246, 189, 0.8), rgba(208, 244, 222, 0.8), rgba(169, 222, 249, 0.8), rgba(229, 195, 249, 0.8));
     border-radius: 5px 10px;
     text-align: center;
     border: 1px solid #483e4e;
@@ -160,13 +161,16 @@ h2 {
 /* Footer */
 
 footer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     width: 100%;
     position: fixed;
     bottom: 0;
     left: 0;
+
+    background: linear-gradient(to top, rgba(255, 153, 200, 1), rgba(252, 246, 189, 1));
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 ul {
@@ -180,18 +184,21 @@ li {
 }
 
 footer p {
+    padding: 2px 0 10px;
     text-align: center;
     font-size: 14px;
 }
 
 i {
+    transform: scale(1.2);
+    padding: 2px;
     cursor: pointer;
     color: black;
 }
 
 i:hover {
     transform: scale(1.5);
-    color: #fcf6bd;
+    color: #71627a;
 }
 
 a {
@@ -206,12 +213,21 @@ a:hover {
 /* Media screens */
 
 @media screen and (min-width: 380px) {
+    h1 {
+        font-size: 32px;
+    }
+
     form {
         width: 80%;
     }
 
+    #todo-input {
+        font-size: 20px;
+    }
+
     .todo-item {
         width: 200px;
+        font-size: 18px;
     }
 
     img {
