--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ body {
 /* header */
 
 header {
-    margin: 20px;
+    margin: 60px 0px 20px;
     padding: 10px;
 
     display: flex;
@@ -159,7 +159,7 @@ h2 {
     align-items: center;
 }
 
-.todo {
+.elem {
     margin: 5px 0;
     padding: 5px 0;
     display: flex;
@@ -168,7 +168,7 @@ h2 {
     align-items: center;
 }
 
-.todo * {
+.elem * {
     display: flex;
     justify-content: center;
 }
@@ -187,6 +187,28 @@ h2 {
     padding: 0;
 }
 
+.stamp {
+    text-align: right;
+    padding-right: 10px;
+}
+
+.stamp p {
+    font-size: 14px;
+}
+
+
+#clock {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
+#clock p {
+    font-weight: bold;
+    font-size: 18px;
+    text-shadow: 1px 1px 10px #d0f4de;
+
+}
 
 /* Footer */
 
