--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,7 @@ body {
 
 header {
     margin: 60px 0px 20px;
-    padding: 10px;
+    padding: 10px 0px;
 
     display: flex;
     align-items: center;
