--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ button {
 /* Background */
 
 body {
-    width: 90%;
+    /* width: 90%; */
     margin: auto;
 
     background-image: linear-gradient(to bottom, #ff99c8, #fcf6bd, #d0f4de, #a9def9, #e4c1f9);
@@ -43,7 +43,8 @@ body {
 /* header */
 
 header {
-    margin: 60px 0px 20px;
+    width: 90%;
+    margin: 60px auto 20px;
     padding: 10px 0px;
 
     display: flex;
@@ -72,6 +73,7 @@ h1 {
 /* Form section */
 
 #form-div {
+    width: 90%;
     margin: 20px auto;
 
     display: flex;
@@ -203,7 +205,7 @@ h2 {
     padding: 5px 0;
     display: flex;
     flex-wrap: wrap;
-    align-content: center;
+    justify-content: center;
     align-items: center;
 }
 
@@ -220,7 +222,7 @@ h2 {
     text-align: center;
     border: 1px solid #483e4e;
     font-size: 16px;
-    flex: 1;
+    /* flex: 1; */
 }
 
 .lead-img {
@@ -231,7 +233,7 @@ h2 {
 
 .stamp {
     text-align: right;
-    padding-right: 10px;
+    padding-right: 20px;
 }
 
 .stamp p {
@@ -324,7 +326,7 @@ a:hover {
 
     #todo-list,
     #todo-done {
-        width: 90%;
+        width: 80%;
     }
 
     #todo-input {
@@ -332,6 +334,7 @@ a:hover {
     }
 
     .todo-item {
+        flex: 1;
         font-size: 18px;
     }
 }
